This is the last version with the old checkCheckpoints function. Next iteration will have updated checkpoint

--- a/index.html
+++ b/index.html
@@ -897,7 +897,7 @@
 										return; // Exit the function when a checkpoint is reached
 									}
 								}
-								//console.log("No checkpoints reached in the current set.");
+								//console.log("No checkpoints reached in the current set.").;
 							} else {
 								console.log("No more checkpoint sets to check.");
 							}
