--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,7 @@
 				const myData = snapshot.val();
 				if (myData) {
 					const passage = myData[myPassage];
-					console.log(databaseName);
+					//console.log(databaseName);
 					if (passage !== previousPassage) { // Compare with previous passage
 						console.log(String(passage));
 						displayText(String(passage));
