--- a/index.html
+++ b/index.html
@@ -882,10 +882,8 @@
 
 								// Process checkpoints within the current set
 								const checkpointSet = checkpoints[currentCheckpointKey];
-								const checkpointIndex = deviceName === "hachi_BT" ? 1 : 0;
 
-								if (checkpointSet && checkpointSet.length > checkpointIndex) {
-									const checkpoint = checkpointSet[checkpointIndex];
+								for (const checkpoint of checkpointSet) {
 									const distance = calculateDistance(latitude, longitude, checkpoint.latitude, checkpoint.longitude);
 									chkPointDistance = distance.toFixed(2);
 									console.log('Checkpoint Latitude:', checkpoint.latitude, 'Checkpoint Longitude:', checkpoint.longitude, 'Distance:', chkPointDistance);
@@ -898,13 +896,15 @@
 										return; // Exit the function when a checkpoint is reached
 									}
 								}
-								//console.log("No checkpoints reached in the current set.");
+
+								console.log("No checkpoints reached in the current set.");
 							} else {
 								console.log("No more checkpoint sets to check.");
 							}
 						}
 					}
 				}
+
 
 
 				function setupColors() {
