--- a/index.html
+++ b/index.html
@@ -896,8 +896,7 @@
 										return; // Exit the function when a checkpoint is reached
 									}
 								}
-
-								console.log("No checkpoints reached in the current set.");
+								//console.log("No checkpoints reached in the current set.");
 							} else {
 								console.log("No more checkpoint sets to check.");
 							}
