--- a/index.html
+++ b/index.html
@@ -961,7 +961,8 @@
 			let prevStatus = null;
 			let prevSpeed = null;
 			let prevSpeaking = null
-
+			let prevPartMoving = null;
+			let prevDirectionMoving = null;
 
 			// Function to write data to the database
 			function writeToDatabase() {
