--- a/index.html
+++ b/index.html
@@ -949,9 +949,7 @@
 			// Reference to your Firebase Realtime Database
 			const database = getDatabase(app);
 
-			// Function to write data to the database
-
-			// Variables to store previous values of latitude, longitude, and currentCheckpoint
+			// Store previous values of synced variables
 			let prevLatitude = null;
 			let prevLongitude = null;
 			let prevCurrentCheckpoint = null;
