--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -847,7 +847,7 @@ Loading variables...
 		&lt;&lt;include &quot;both_preamble&quot;&gt;&gt;
 	&lt;/div&gt;
 	&lt;div id=&quot;hachi_story&quot;&gt;
-       		 &lt;&lt;include &quot;hachi_act1&quot;&gt;&gt;
+       		 &lt;&lt;include &quot;hachi_act2&quot;&gt;&gt;
 	&lt;/div&gt;
 &lt;/div&gt;
 
@@ -1141,7 +1141,49 @@ console.log(variables().hachi_comment);
           &lt;&lt;/script&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/repeat&gt;&gt;
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="14" name="hachi_tram" tags="" position="1275,900" size="100,200"></tw-passagedata><tw-passagedata pid="15" name="hachi_fountain" tags="" position="1525,900" size="100,200"></tw-passagedata><tw-passagedata pid="16" name="hachi_bank" tags="" position="1525,1225" size="100,200"></tw-passagedata><tw-passagedata pid="17" name="hachi_stairs" tags="" position="1275,1200" size="100,200"></tw-passagedata><tw-passagedata pid="18" name="avatar_tobacco" tags="" position="2275,900" size="100,200"></tw-passagedata><tw-passagedata pid="19" name="avatar_bakery" tags="" position="2525,900" size="100,200"></tw-passagedata><tw-passagedata pid="20" name="avatar_bank" tags="" position="2275,1225" size="100,200"></tw-passagedata><tw-passagedata pid="21" name="avatar_church" tags="" position="2525,1200" size="100,200"></tw-passagedata><tw-passagedata pid="22" name="hachi_act2" tags="" position="1400,1100" size="100,100">HACHI ACT 2</tw-passagedata><tw-passagedata pid="23" name="avatar_act2" tags="" position="2400,1100" size="100,100">AVATAR_ACT2</tw-passagedata><tw-passagedata pid="24" name="hachi_tram_2" tags="" position="1025,1000" size="100,100"></tw-passagedata><tw-passagedata pid="25" name="hachi_tram_1" tags="" position="1025,875" size="100,100"></tw-passagedata><tw-passagedata pid="26" name="hachi_tram_4" tags="" position="1150,1000" size="100,100"></tw-passagedata><tw-passagedata pid="27" name="hachi_tram_3" tags="" position="1150,875" size="100,100"></tw-passagedata><tw-passagedata pid="28" name="hachi_stairs_1" tags="" position="1025,1200" size="100,100"></tw-passagedata><tw-passagedata pid="29" name="hachi_stairs_3" tags="" position="1025,1325" size="100,100"></tw-passagedata><tw-passagedata pid="30" name="hachi_stairs_2" tags="" position="1150,1200" size="100,100"></tw-passagedata><tw-passagedata pid="31" name="hachi_stairs_4" tags="" position="1150,1325" size="100,100"></tw-passagedata><tw-passagedata pid="32" name="hachi_bank_4" tags="" position="1775,1350" size="100,100"></tw-passagedata><tw-passagedata pid="33" name="hachi_bank_3" tags="" position="1775,1225" size="100,100"></tw-passagedata><tw-passagedata pid="34" name="hachi_bank_1" tags="" position="1650,1225" size="100,100"></tw-passagedata><tw-passagedata pid="35" name="hachi_bank_2" tags="" position="1650,1350" size="100,100"></tw-passagedata><tw-passagedata pid="36" name="hachi_fountain_2" tags="" position="1650,1000" size="100,100"></tw-passagedata><tw-passagedata pid="37" name="hachi_fountain_1" tags="" position="1650,875" size="100,100"></tw-passagedata><tw-passagedata pid="38" name="hachi_fountain_3" tags="" position="1775,875" size="100,100"></tw-passagedata><tw-passagedata pid="39" name="hachi_fountain_4" tags="" position="1775,1000" size="100,100"></tw-passagedata><tw-passagedata pid="40" name="avatar_tobacco_4" tags="" position="2150,1000" size="100,100"></tw-passagedata><tw-passagedata pid="41" name="avatar_tobacco_2" tags="" position="2150,875" size="100,100"></tw-passagedata><tw-passagedata pid="42" name="avatar_tobacco_1" tags="" position="2025,875" size="100,100"></tw-passagedata><tw-passagedata pid="43" name="avatar_tobacco_3" tags="" position="2025,1000" size="100,100"></tw-passagedata><tw-passagedata pid="44" name="avatar_bakery_3" tags="" position="2650,1000" size="100,100"></tw-passagedata><tw-passagedata pid="45" name="avatar_bakery_1" tags="" position="2650,875" size="100,100"></tw-passagedata><tw-passagedata pid="46" name="avatar_bakery_2" tags="" position="2775,875" size="100,100"></tw-passagedata><tw-passagedata pid="47" name="avatar_bakery_4" tags="" position="2775,1000" size="100,100"></tw-passagedata><tw-passagedata pid="48" name="avatar_bank_3" tags="" position="2150,1225" size="100,100"></tw-passagedata><tw-passagedata pid="49" name="avatar_bank_4" tags="" position="2150,1350" size="100,100"></tw-passagedata><tw-passagedata pid="50" name="avatar_bank_2" tags="" position="2025,1350" size="100,100"></tw-passagedata><tw-passagedata pid="51" name="avatar_bank_1" tags="" position="2025,1225" size="100,100"></tw-passagedata><tw-passagedata pid="52" name="avatar_church_1" tags="" position="2650,1200" size="100,100"></tw-passagedata><tw-passagedata pid="53" name="avatar_church_2" tags="" position="2650,1325" size="100,100"></tw-passagedata><tw-passagedata pid="54" name="avatar_church_3" tags="" position="2775,1200" size="100,100"></tw-passagedata><tw-passagedata pid="55" name="avatar_church_4" tags="" position="2775,1325" size="100,100"></tw-passagedata><tw-passagedata pid="56" name="both_preamble" tags="" position="1850,375" size="200,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="14" name="hachi_tram" tags="" position="1275,900" size="100,200"></tw-passagedata><tw-passagedata pid="15" name="hachi_fountain" tags="" position="1525,900" size="100,200"></tw-passagedata><tw-passagedata pid="16" name="hachi_bank" tags="" position="1525,1225" size="100,200"></tw-passagedata><tw-passagedata pid="17" name="hachi_stairs" tags="" position="1275,1200" size="100,200"></tw-passagedata><tw-passagedata pid="18" name="avatar_tobacco" tags="" position="2275,900" size="100,200"></tw-passagedata><tw-passagedata pid="19" name="avatar_bakery" tags="" position="2525,900" size="100,200"></tw-passagedata><tw-passagedata pid="20" name="avatar_bank" tags="" position="2275,1225" size="100,200"></tw-passagedata><tw-passagedata pid="21" name="avatar_church" tags="" position="2525,1200" size="100,200"></tw-passagedata><tw-passagedata pid="22" name="hachi_act2" tags="" position="1400,1100" size="100,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;set $hachi_passage to &quot;hachi_act2/Hachi meets Lucia, the fairy living in the flower, which gives him a mission. To learn more about Buro and why life placed them together. It will take him to 4 different places where he will meet four different, colorfoul characters.  The nearby tram stop, the fountain by the park, the stairs of an old building, and the bank on the corner of the street.&quot;&gt;&gt;
+
+&lt;&lt;liveblock&gt;&gt;
+
+&lt;&lt;if $hachi_narrating == &quot;hachi_act2false&quot; and $hachi_partMoving !== &quot;none&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_act2_01/&#39;Greetings, furry friend! I am Lucia, guardian of this enchanted flower. You must be Hachi, the loyal Akita. Fate has brought you to me for a special purpose.
+ &#39;Hachi&#39;s ears perk up with interest as Lucia explains the reason for their meeting.&quot;&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+
+&lt;&lt;if $hachi_narrating == &quot;hachi_act2_01false&quot; and $hachi_partMoving !== &quot;none&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_act2_02/&#39;Life has brought us together for a reason, dear Hachi. Your companion, Buro, is facing a journey of his own, and you must learn more about him to understand why you were destined to be together.&#39;
+Lucia gives Hachi a mission to seek out four colorful characters across the city, each with unique insights into Buro&#39;s life and their shared bond.&quot;&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+
+&lt;&lt;if $hachi_narrating == &quot;hachi_act2_02false&quot; and $hachi_partMoving !== &quot;none&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_act2_03/&#39;Visit the tram stop, the fountain, the stairs of the old building, and the bank. There, you will meet the people who hold the keys to unraveling your friendship.
+With a sense of purpose, Hachi feels ready to embark on an adventure that will deepen his understanding of Buro and their unbreakable bond.&quot;&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+
+&lt;&lt;if &lt;&lt;if $hachi_narrating == &quot;hachi_act2_03false&quot;&gt;&gt;
+    &lt;&lt;if $hachi_checkpoint is &quot;hachi_tram&quot;&gt;&gt;
+        &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
+            &lt;&lt;include &quot;hachi_tram_1&quot;&gt;&gt;
+        &lt;&lt;/replace&gt;&gt;
+    &lt;&lt;elseif $hachi_checkpoint is &quot;hachi_fountain&quot;&gt;&gt;
+        &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
+            &lt;&lt;include &quot;hachi_fountain_1&quot;&gt;&gt;
+        &lt;&lt;/replace&gt;&gt;
+    &lt;&lt;elseif $hachi_checkpoint is &quot;hachi_stairs&quot;&gt;&gt;
+        &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
+            &lt;&lt;include &quot;hachi_stairs_1&quot;&gt;&gt;
+        &lt;&lt;/replace&gt;&gt;
+    &lt;&lt;elseif $hachi_checkpoint is &quot;hachi_bank&quot;&gt;&gt;
+        &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
+            &lt;&lt;include &quot;hachi_bank_1&quot;&gt;&gt;
+        &lt;&lt;/replace&gt;&gt;
+    &lt;&lt;/if&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+
+&lt;&lt;/liveblock&gt;&gt;
+
+</tw-passagedata><tw-passagedata pid="23" name="avatar_act2" tags="" position="2400,1100" size="100,100">AVATAR_ACT2</tw-passagedata><tw-passagedata pid="24" name="hachi_tram_2" tags="" position="1025,1000" size="100,100"></tw-passagedata><tw-passagedata pid="25" name="hachi_tram_1" tags="" position="1025,875" size="100,100"></tw-passagedata><tw-passagedata pid="26" name="hachi_tram_4" tags="" position="1150,1000" size="100,100"></tw-passagedata><tw-passagedata pid="27" name="hachi_tram_3" tags="" position="1150,875" size="100,100"></tw-passagedata><tw-passagedata pid="28" name="hachi_stairs_1" tags="" position="1025,1200" size="100,100"></tw-passagedata><tw-passagedata pid="29" name="hachi_stairs_3" tags="" position="1025,1325" size="100,100"></tw-passagedata><tw-passagedata pid="30" name="hachi_stairs_2" tags="" position="1150,1200" size="100,100"></tw-passagedata><tw-passagedata pid="31" name="hachi_stairs_4" tags="" position="1150,1325" size="100,100"></tw-passagedata><tw-passagedata pid="32" name="hachi_bank_4" tags="" position="1775,1350" size="100,100"></tw-passagedata><tw-passagedata pid="33" name="hachi_bank_3" tags="" position="1775,1225" size="100,100"></tw-passagedata><tw-passagedata pid="34" name="hachi_bank_1" tags="" position="1650,1225" size="100,100"></tw-passagedata><tw-passagedata pid="35" name="hachi_bank_2" tags="" position="1650,1350" size="100,100"></tw-passagedata><tw-passagedata pid="36" name="hachi_fountain_2" tags="" position="1650,1000" size="100,100"></tw-passagedata><tw-passagedata pid="37" name="hachi_fountain_1" tags="" position="1650,875" size="100,100"></tw-passagedata><tw-passagedata pid="38" name="hachi_fountain_3" tags="" position="1775,875" size="100,100"></tw-passagedata><tw-passagedata pid="39" name="hachi_fountain_4" tags="" position="1775,1000" size="100,100"></tw-passagedata><tw-passagedata pid="40" name="avatar_tobacco_4" tags="" position="2150,1000" size="100,100"></tw-passagedata><tw-passagedata pid="41" name="avatar_tobacco_2" tags="" position="2150,875" size="100,100"></tw-passagedata><tw-passagedata pid="42" name="avatar_tobacco_1" tags="" position="2025,875" size="100,100"></tw-passagedata><tw-passagedata pid="43" name="avatar_tobacco_3" tags="" position="2025,1000" size="100,100"></tw-passagedata><tw-passagedata pid="44" name="avatar_bakery_3" tags="" position="2650,1000" size="100,100"></tw-passagedata><tw-passagedata pid="45" name="avatar_bakery_1" tags="" position="2650,875" size="100,100"></tw-passagedata><tw-passagedata pid="46" name="avatar_bakery_2" tags="" position="2775,875" size="100,100"></tw-passagedata><tw-passagedata pid="47" name="avatar_bakery_4" tags="" position="2775,1000" size="100,100"></tw-passagedata><tw-passagedata pid="48" name="avatar_bank_3" tags="" position="2150,1225" size="100,100"></tw-passagedata><tw-passagedata pid="49" name="avatar_bank_4" tags="" position="2150,1350" size="100,100"></tw-passagedata><tw-passagedata pid="50" name="avatar_bank_2" tags="" position="2025,1350" size="100,100"></tw-passagedata><tw-passagedata pid="51" name="avatar_bank_1" tags="" position="2025,1225" size="100,100"></tw-passagedata><tw-passagedata pid="52" name="avatar_church_1" tags="" position="2650,1200" size="100,100"></tw-passagedata><tw-passagedata pid="53" name="avatar_church_2" tags="" position="2650,1325" size="100,100"></tw-passagedata><tw-passagedata pid="54" name="avatar_church_3" tags="" position="2775,1200" size="100,100"></tw-passagedata><tw-passagedata pid="55" name="avatar_church_4" tags="" position="2775,1325" size="100,100"></tw-passagedata><tw-passagedata pid="56" name="both_preamble" tags="" position="1850,375" size="200,100">&lt;&lt;nobr&gt;&gt;
 &lt;div id=&quot;#avatarStory&quot;&gt;
 $avatar_passage 
 &lt;/div&gt;
@@ -1222,7 +1264,7 @@ $avatar_passage
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if ($avatar_narrating == &quot;avatar_pre_04false&quot; or $avatar_narrating == &quot;avatar_04Bfalse&quot;) and $avatar_part_mov == &quot;head&quot; and $avatar_part_dir == &quot;up&quot;&gt;&gt;
-  &lt;&lt;set $avatar_passage to &quot;avatar_pre_04A/&#39;Hachi! Over here!&#39; Buro calls out, his voice filled with excitement&quot;&gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_pre_04A/&#39;Hachi! Over here!&#39; Buro calls out, his voice filled with excitement... but nothing happens&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if ($avatar_narrating == &quot;avatar_pre_04false&quot; or $avatar_narrating == &quot;avatar_pre_04Afalse&quot;) and ($avatar_movement == &quot;standing left leg&quot; or $avatar_movement == &quot;standing right leg&quot;) &gt;&gt;
@@ -1233,7 +1275,7 @@ $avatar_passage
 &lt;&lt;if $nextAct is true and $avatar_narrating== &quot;avatar_pre_04Bfalse&quot; &gt;&gt;
  &lt;&lt;set $avatar_passage to &quot;avatar_pre_05/Then, Buro starts walking again.&quot;&gt;&gt;
     &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
-  		&lt;&lt;include&quot;avatar_act1&quot;&gt;&gt;
+  		&lt;&lt;include&quot;avatar_act1_1&quot;&gt;&gt;
         &lt;&lt;set $nextAct to false&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
 &lt;&lt;/if&gt;&gt;
@@ -1273,7 +1315,7 @@ console.log(variables().hachi_comment);
 &lt;&lt;/if&gt;&gt;
 &lt;&lt;/liveblock&gt;&gt;
 
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="60" name="avatar_act1" tags="" position="1975,625" size="100,200">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="60" name="avatar_act1" tags="" position="2300,100" size="100,200">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set variables().avatar_checkpoint_dist to $avatar_checkpoint_dist&gt;&gt;
 &lt;&lt;set $avatar_comment to &quot;&quot;&gt;&gt;
 
@@ -1314,7 +1356,7 @@ console.log(variables().avatar_comment);
 $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_act1_01false&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_act1_02/Hachi reaches the statue: What should Hachi do? Bark, to see who replies? Or, get a closer look at the tiny flower in th base of the statue? &quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_act1_02/Hachi reaches the statue: What should Hachi do? Bark, to see who replies? Or, get a closer look at the tiny flower in the base of the statue? &quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if ($hachi_narrating == &quot;hachi_act1_02false&quot; or $hachi_narrating ==&quot;hachi_act1_03Bfalse&quot;) and $hachi_tag == &quot;16&quot;&gt;&gt;
@@ -1341,7 +1383,7 @@ $hachi_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;
-</tw-passagedata><tw-passagedata pid="62" name="avatar_act1_1" tags="" position="2100,625" size="100,100">&lt;&lt;nobr&gt;&gt;
+</tw-passagedata><tw-passagedata pid="62" name="avatar_act1_1" tags="" position="1975,625" size="100,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $avatar_passage to &quot;avatar_act1_01/As Buro calls out to Hachi, he realizes that Hachi isn&#39;t responding. He worries, as he looks at the street, searching for any sign of his furry friend. &quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
