--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -842,6 +842,7 @@ Loading variables...
       &lt;div id=&quot;refreshArea&quot;&gt;	&lt;/div&gt;
 &lt;/div&gt;
 
+
 &lt;div id=&quot;bottomContainer&quot;&gt;
 	&lt;div id=&quot;avatar_story&quot;&gt;
 		&lt;&lt;include &quot;both_preamble&quot;&gt;&gt;
@@ -1161,7 +1162,7 @@ Lucia gives Hachi a mission to seek out four colorful characters across the city
 With a sense of purpose, Hachi feels ready to embark on an adventure that will deepen his understanding of Buro and their unbreakable bond.&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if &lt;&lt;if $hachi_narrating == &quot;hachi_act2_03false&quot;&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_act2_03false&quot;&gt;&gt;
     &lt;&lt;if $hachi_checkpoint is &quot;hachi_tram&quot;&gt;&gt;
         &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
             &lt;&lt;include &quot;hachi_tram_1&quot;&gt;&gt;
