--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 								sentenceSource = 'hachi_sentences.json';
 								tagSource = 'tags.json';
 								initializeSounds();
-								toggleDeviceName2();
+								document.getElementById("hachiCheckbox").checked = true;
 							} else {
 								console.log("Loading settings for Avatar_BT");
 								labels = ["LEFT FOREARM", "LEFT SHOULDER", "HEAD", "RIGHT SHOULDER", "RIGHT FOREARM", "WAIST", "LEFT LEG", "RIGHT LEG"];
@@ -134,7 +134,7 @@
 								sentenceSource = 'avatar_sentences.json';
 								tagSource = 'tags.json';
 								initializeSounds();
-								toggleDeviceName2();
+								document.getElementById("hachiCheckbox").checked = false;
 							}
 							// Listen for characteristic value changes
 							characteristic.addEventListener("characteristicvaluechanged", handleCharacteristicValueChanged);
